# byteview

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
dreamcore/: __init__.py  engine.py  sequence.py
dreamcore/generators/: abstract.py  scene.py  sensory.py
dreamcore/memory/: anchors.py  consolidation.py
dreamcore/symbols/: archetypes.py  resonance.py
dreamcore/utils/: entropy.py  timing.py
examples/: basic_dream.py
tests/: test_all.py
